// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Lozenge alert matches the snapshot 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FAEAE9;
  border: 1px solid #CD2C23;
  border-radius: var(--border-radius-half);
  box-sizing: border-box;
  color: #CD2C23;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  line-height: 0.875rem;
  max-width: 312px;
  padding: 0 var(--spacing-half);
  text-transform: uppercase;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c1 {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<div
  class="c0"
>
  <span
    class="c1"
  >
    alert
  </span>
</div>
`;

exports[`Lozenge default matches the snapshot 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F1F2F2;
  border: 1px solid #60666E;
  border-radius: var(--border-radius-half);
  box-sizing: border-box;
  color: #60666E;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  line-height: 0.875rem;
  max-width: 312px;
  padding: 0 var(--spacing-half);
  text-transform: uppercase;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c1 {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<div
  class="c0"
>
  <span
    class="c1"
  >
    default
  </span>
</div>
`;

exports[`Lozenge info matches the snapshot 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #E0F0F9;
  border: 1px solid #006296;
  border-radius: var(--border-radius-half);
  box-sizing: border-box;
  color: #006296;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  line-height: 0.875rem;
  max-width: 312px;
  padding: 0 var(--spacing-half);
  text-transform: uppercase;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c1 {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<div
  class="c0"
>
  <span
    class="c1"
  >
    info
  </span>
</div>
`;

exports[`Lozenge matches the snapshot 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F1F2F2;
  border: 1px solid #60666E;
  border-radius: var(--border-radius-half);
  box-sizing: border-box;
  color: #60666E;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  line-height: 0.875rem;
  max-width: 312px;
  padding: 0 var(--spacing-half);
  text-transform: uppercase;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c1 {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<div
  class="c0"
>
  <span
    class="c1"
  >
    Hello World
  </span>
</div>
`;

exports[`Lozenge success matches the snapshot 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F6FCF8;
  border: 1px solid #008533;
  border-radius: var(--border-radius-half);
  box-sizing: border-box;
  color: #008533;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  line-height: 0.875rem;
  max-width: 312px;
  padding: 0 var(--spacing-half);
  text-transform: uppercase;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c1 {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<div
  class="c0"
>
  <span
    class="c1"
  >
    success
  </span>
</div>
`;

exports[`Lozenge warning matches the snapshot 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFF7E5;
  border: 1px solid #F5A200;
  border-radius: var(--border-radius-half);
  box-sizing: border-box;
  color: #F5A200;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  line-height: 0.875rem;
  max-width: 312px;
  padding: 0 var(--spacing-half);
  text-transform: uppercase;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c1 {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<div
  class="c0"
>
  <span
    class="c1"
  >
    warning
  </span>
</div>
`;
